# ose-v2

./: .gitignore  API_QUICKSTART.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_api.py
api/: FEATURE_ENGINEERING_CONCEPT.md  README.md  __init__.py  examples.py  extraction_service.py  feature_engineer.py  main.py  schemas.py  service.py
inference/: README.md  feature_list.json  predict.py  preprocess.joblib
models/: final_calibrated.joblib  final_raw.joblib
notebooks/: check_data.ipynb  check_report.ipynb
src/: extract_all.py  train.py
src/data/: loader.py  quality.py  windowing.py
src/extraction/: __init__.py  base_loader.py  extract_01_company_basic_info.py  extract_02_financial_data.py  extract_03_workforce_data.py  extract_04_company_structure.py  extract_05_classification_flags.py  extract_06_contact_metrics.py  extract_07_kpi_data.py  extract_08_signals.py  extract_09_articles.py  run_all_extractions.py
src/features/: financials.py  selection.py  signals.py  text.py
src/models/: configs.py  evaluator.py  explainability.py
src/pipeline/: __init__.py  builder.py
src/reporting/: __init__.py  generate_classifications.py  generate_report.py
src/tests/: leak_tests.py  test_cli_entrypoints.py  test_data_quality.py  test_features.py  test_inference.py  test_pipeline_train.py  test_regression_sanity.py  test_reporting.py  test_windowing.py
src/tests/fixtures/data_external/: inpi_ratios.parquet
src/tests/fixtures/inference/: features.parquet  labels.parquet
src/tests/fixtures/raw_json/: 01_company_basic_info.json  (+4 more)
